# gm2ringsim

./: CMakeLists.txt
actions/: BeamScanAction_service.cc  BeamScanAction_service.hh  CMakeLists.txt  DecayedPositronAction_service.cc  DecayedPositronAction_service.hh  EventAction_service.cc  EventAction_service.hh  EventAndRunAction_service.cc  EventAndRunAction_service.hh  EventRecord.hh  Gm2ModularPhysicsList.cc  Gm2ModularPhysicsList.hh  Gm2PhysicsList_service.cc  Gm2PhysicsList_service.hh  LostMuonAction_service.cc  LostMuonAction_service.hh  N02PhysicsList.cc  N02PhysicsList.hh  PhysicsList_service.cc  PhysicsList_service.hh  PrimaryGeneratorAction_service.cc  PrimaryGeneratorAction_service.hh  RunAction_service.cc  RunAction_service.hh  SpinTrackingSettings.cc  SpinTrackingSettings.hh  StackingAction_service.cc  StackingAction_service.hh  classes.h  g2GeneralParticleSource.cc  g2GeneralParticleSource.hh  g2SPSTimeDistribution.cc  g2SingleParticleSource.cc  g2SingleParticleSource.hh  physicsList.cc  physicsList.hh  physicsListMessenger.cc  physicsListMessenger.hh  physicsListQGSP_BERT.cc  physicsListQGSP_BERT.hh  (+1 more)
actions/PGA/: BeamTransportPGA_service.cc  BeamTransportPGA_service.hh  CMakeLists.txt  CaloElectronPGA_service.cc  CaloElectronPGA_service.hh  CaloHitPGA_service.cc  CaloHitPGA_service.hh  G2BeamTransportSource.cc  G2BeamTransportSource.cc~  G2BeamTransportSource.hh  G2BeamTransportSource.hh~  G2GPSSettings.cc  G2GPSSettings.hh  G2GeneralParticleSource.cc  G2GeneralParticleSource.hh  G2InflectorSource.cc  G2InflectorSource.hh  G2MuonGasSource.cc  G2MuonGasSource.hh  G2PGA_service.cc  G2PGA_service.hh  G2SingleParticleSource.cc  InflectorPGA_service.cc  InflectorPGA_service.hh  MuonGasPGA_service.cc  MuonGasPGA_service.hh  PGA.fcl  PrimaryGeneratorAction_service.cc  PrimaryGeneratorAction_service.hh  SimpleParticleSource_service.cc  SimpleParticleSource_service.hh  g2GPS.fcl  g2GeneralParticleSource.cc  g2GeneralParticleSource.hh  g2MuonGasSource.cc  g2MuonGasSource.hh  g2PreciseValues.cc  g2SPSTimeDistribution.cc  g2SPSTimeDistribution.hh  g2SPSTimeDistribution_tmp.cc  (+6 more)
arc/: ArcGeometry.cc  ArcGeometry.hh  Arc_service.cc  Arc_service.hh  ArtGeometry.hh  CMakeLists.txt  StorageRingField.cc  StorageRingField.hh  arc.fcl  storageFieldQ1234.g2map  storageVertex.g2gps
calo/: CMakeLists.txt  CaloArtRecord.hh  CaloHit.cc  CaloHit.hh  CaloSD.cc  CaloSD.hh  CalorimeterGeometry.cc  CalorimeterGeometry.hh  Calorimeter_service.cc  Calorimeter_service.hh  PhotodetectorArtRecord.hh  PhotodetectorHit.cc  PhotodetectorHit.hh  PhotodetectorPhotonArtRecord.hh  PhotodetectorPhotonHit.cc  PhotodetectorPhotonHit.hh  PhotodetectorSD.cc  PhotodetectorSD.hh  PhotonHitCorrelator.cc  PhotonHitCorrelator.hh  ShowerListManager.cc  ShowerListManager.hh  XtalArtRecord.hh  XtalHit.cc  XtalHit.hh  XtalPhotonArtRecord.hh  XtalPhotonHit.cc  XtalPhotonHit.hh  XtalSD.cc  XtalSD.hh  calorimeter.fcl  classes.h  classes_def.xml
collimator/: CMakeLists.txt  CollimatorGeometry.cc  CollimatorGeometry.hh  Collimator_service.cc  Collimator_service.hh  collimator.fcl
common/: CMakeLists.txt  UsefulVariables.cc  UsefulVariables.hh  conversions.hh  g2PreciseValues.cc  g2PreciseValues.hh  spinController.cc
common/spin/: CMakeLists.txt  SpinArtRecord.cc  SpinArtRecord.hh  SpinController.cc  SpinController.hh  SpinHit.cc  SpinHit.hh  classes.h  classes_def.xml  spinRecordLinkDef.h
common/spin/arthits/: classes.h
exampleAnalyses/: CMakeLists.txt
fcl/: BeamDiagnosticMuPlus.fcl  BeamDiagnosticMuPlusMuonGasGun.fcl  CMakeLists.txt  ProductionMuPlus.fcl  ProductionMuPlusMuonGasGun.fcl  ProductionMuPlusMuonGasGun_MaterialScan.fcl  TDAinfgun.fcl  analyzeTracks.fcl  beamtransport_gun.fcl  debug-rootOutput.fcl  debug.fcl  debug_obsolete.fcl  findGoodTracks.fcl  geantFreeReadCalo.fcl  gm2infgun0710.root  gm2trackerhits0710.root  infgun.fcl  inflector_gun.fcl  leah-tester.fcl  makeTrackerHits.fcl  pauseSpecificEventsDemo.fcl  readHits.fcl  readRingTrackers.fcl  readTracks.fcl  runLeah.fcl  testBeamCal.fcl  testBeamFH.fcl
fiberHarp/: CMakeLists.txt  FiberHarpArtRecord.hh  FiberHarpGeometry.cc  FiberHarpGeometry.hh  FiberHarpHit.cc  FiberHarpHit.hh  FiberHarpRecord.hh  FiberHarpSD.cc  FiberHarpSD.hh  FiberHarp_service.cc  FiberHarp_service.hh  README  classes.h  classes_def.xml  fiberHarp.fcl
fiberHarp/arthits/: classes.h
fields/: CMakeLists.txt  field_point.cc  field_point.hh  field_point.icc  g2EqEMFieldWithEDM.cc  g2EqEMFieldWithEDM.hh  g2EqEMFieldWithSpin.cc  g2EqEMFieldWithSpin.hh  g2FieldEqRhs.cc  g2FieldEqRhs.hh  gm2ringsimout.root
g2RunTimeFiles/: CMakeLists.txt  horizInScrapingFieldQ2.g2map  horizontalScrapingFieldQ2.g2map  horizontalScrapingFieldQ4.g2map  station_default.json  stations.json  traceback_default.json  tracebacks.json  verticalScrapingFieldQ1Q3.g2map
kicker/: CMakeLists.txt  KickerField.cc  KickerField.hh  KickerGeometry.cc  KickerGeometry.hh  KickerHelpers.hh  Kicker_service.cc  Kicker_service.hh  kicker.fcl  kicker_nokick.fcl
macros/: CMakeLists.txt  vis.mac
macros/ringtracker/: FastRotation.C  MakeCDF.C  allrun.sh  collecteff.C  collecteff.sh  copy.sh  fasrof.cxx  g2gen.cxx  init.sh  init.sh~  makecode_for_plotStorage.sh  makefcl.sh  move.sh  plotStorage.C  plotTwiss.C  plotfast.sh  plotfastrotation.C  plotinf.sh  plotinflector.C  run.sh  runner.sh  sub2.sh  submit.sh
macros/ringtracker/atlasstyle-00-03-04/: AtlasLabels.C  AtlasStyle.C
quad/: CMakeLists.txt  QuadField.cc  QuadField.hh  QuadGeometry.cc  QuadGeometry.hh  Quad_service.cc  Quad_service.hh  quad.fcl  tmp.fcl
strawtracker/: CMakeLists.txt  StrawArtRecord.hh  StrawHit.cc  StrawHit.hh  StrawSD.cc  StrawSD.hh  StrawTrackerGeometry.cc  StrawTrackerGeometry.hh  StrawTracker_service.cc  StrawTracker_service.hh  Straws_service.cc  Straws_service.hh  classes.h  strawtracker.fcl
strawtracker/arthits/: classes.h
ups/: CMakeLists.txt  gm2ringsim-config.cmake.in  product_deps  setup_for_development
world/: CMakeLists.txt  WorldGeometry.cc  WorldGeometry.hh  World_service.cc  World_service.hh  world.fcl
(+190 files in other folders)
